--- a/QUESTIONS/REACT/FACEBOOK/src/components/item.css
+++ b/QUESTIONS/REACT/FACEBOOK/src/components/item.css
@@ -15,5 +15,8 @@ img {
 }
 
 .align-image-center {
-    text-align: center;
+  position:absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
